--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,11 @@
 
 	<supports-screens android:anyDensity="true" />
 
+    <uses-sdk 
+        android:minSdkVersion="8" 
+        android:targetSdkVersion="21" />
+	
+
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY"></uses-permission>
 	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 	<uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
